--- a/login/login.html
+++ b/login/login.html
@@ -20,6 +20,14 @@
         <a id="cart" href="../cart/cart.html"><i class="fa-solid fa-cart-shopping"></i>Cart</a>
     </nav>
 
+    <main>
+      <form>
+        <input type="email" placeholder="Email">
+        <input type="password" placeholder="Password">
+        <input type="submit" class="submit" value="Log in">
+      </form>
+    </main>
+
     <footer class="footer">
       <div class="info">
         <p class="phone"><i class="fa-solid fa-phone"></i>012 345-6789</p>
