--- a/register/register.html
+++ b/register/register.html
@@ -19,7 +19,17 @@
       <a id="register" href="../register/register.html"><i class="fa-solid fa-address-card"></i>Register</a>
       <a id="cart" href="../cart/cart.html"><i class="fa-solid fa-cart-shopping"></i>Cart</a>
   </nav>
+  <main>
+    <form>
+      <input type="text" placeholder="Name">
+      <input type="text" placeholder="Last name">
 
+      <input type="email" placeholder="Email">
+      <input type="password" placeholder="Password">
+      <input type="password" placeholder="Confirm password">
+      <input type="submit" class="submit" value="Register">
+    </form>
+  </main>
   <footer class="footer">
     <div class="info">
       <p class="phone"><i class="fa-solid fa-phone"></i>012 345-6789</p>
